--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -12,8 +12,8 @@ service:
 
 resources:
   limits:
-    cpu: "500m"
-    memory: "512Mi"
+    cpu: "200"
+    memory: "256Mi"
   requests:
     cpu: "200m"
     memory: "256Mi"
