--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   REGION: ${{ secrets.GCP_REGION_DEV }}
   IMAGE_NAME: auth-service
-  REPOSITORY: my-repo
+  REPOSITORY:  gke-docker-repo
   HELM_VALUES_PATH: helm-charts/values.yaml
 
 jobs:
